# TRIP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindPetsc.cmake  ResolveCompilerPaths.cmake
input/: ._test_proposal_plots
input/FAL-C/: ._1_B0_V0_12T_8C_64F  ._1_B30_V0_12T_8C_99F
input/FAL-C/1_B0_V0_12T_8C_64F/RH_in/: Cafull.atom
input/FAL-C/1_B0_V0_12T_8C_64F/RH_in/IDL/: read_RH.pro
input/FAL-C/1_B0_V0_12T_8C_64F/continuum/: ._continuum
input/FAL-C/1_B0_V0_12T_8C_64F_64/RH_in/: atoms.input
input/FAL-C/1_B0_V0_12T_8C_99F_64/RH_in/: FALC93_70.atmos  molecules.input
input/FAL-C/1_B30_V0_12T_8C_99F/: ._RH_in  ._StokesI  ._atom_CaI_4227.rii  ._continuum  ._define_computation_CRD_RIII_epsilon.rii  ._define_computation_RIII_exact_epsilon.rii  ._define_computation_RIII_exact_matrices.rii  ._define_computation_beam_CaI.rii  ._define_computation_beam_CaI_eps.rii  ._define_computation_beam_CaI_eps_auto.rii  ._define_computation_beam_CaI_hpc.rii  ._diff_directions_list.rii  atom_CaI_4227.rii  define_computation_CRD_RIII_epsilon.rii  define_computation_RIII_exact_epsilon.rii  define_computation_RIII_exact_matrices.rii  define_computation_beam_CaI.rii  define_computation_beam_CaI_eps.rii  define_computation_beam_CaI_eps_auto.rii  define_computation_beam_CaI_hpc.rii  diff_directions_list.rii
input/FAL-C/1_B30_V0_12T_8C_99F/RH_in/: ._Cafull.atom  ._FALC93_70.atmos  ._IDL  ._abundance.input  ._atoms.input  ._keyword.input  ._kurucz.input  ._molecules.input  ._opacity_fudge.input  ._pf_Kurucz.input  keyword.input
input/FAL-C/1_B30_V0_12T_8C_99F/RH_in/IDL/: ._read_RH.pro
input/FAL-C/2_B0_V10P_12T_8C_99F/RH_in/: FALC93_70_v10.atmos  keyword.input  kurucz.input
input/FAL-C/3_B0_V10N_12T_8C_99F/RH_in/: FALC93_70_v10N.atmos  abundance.input  keyword.input
input/FAL-C/3_B0_V10N_12T_8C_99F/RH_in/IDL/: read_RH.pro
input/FAL-C/B20_V0_12T_8C_99F_1Pi4_9Pi8/: atom_CaI_4227.rii  define_Solve_Ray.rii  diff_directions_list.rii
input/PORTA/: ._cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd  ._cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_wider_pp_it100.pmd  ._cai_0Bx_0By_0Bz_1Vx_1Vy_1Vz_GT4_5x5x133.pmd  ._cai_0Bx_0By_0Bz_1Vx_1Vy_1Vz_GT4_5x5x133_it100.pmd  ._cai_1Bx_1By_1Bz_1Vx_1Vy_1Vz_GT4_32x32x133.pmd  .cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd.shfp.14200.1644260900  .cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd.shfp.390.25812797  .cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd.shfp.5921.608894738  .cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd.shfp.9824.1654959079  cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.config  cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_it100.pmd  cai_0Bx_0By_0Bz_0Vx_0Vy_0Vz_GT4_5x5x133_wider_pp_it100.pmd  cai_0Bx_0By_0Bz_1Vx_1Vy_1Vz_GT4_5x5x133.pmd  cai_0Bx_0By_0Bz_1Vx_1Vy_1Vz_GT4_5x5x133_it100.pmd
mn_bin/: PRD_run_with_options_1e-7.sh  PRD_run_with_options_1e-9.sh  PRD_run_with_options_Vh0.sh  PRD_run_with_options_Vh0_B0.sh  PRD_run_with_options_Vz0.sh  PRD_run_with_options_Vz0_B0.sh  run_with_options.sh
mn_bin/Archivio/: CRD_run_with_options.sh  CRD_run_with_options_B0V.sh  CRD_run_with_options_B0V0.sh  CRD_run_with_options_BV0.sh  PRD_run_with_options.sh  PRD_run_with_options_B0V.sh  PRD_run_with_options_B0V0.sh
note_lavoro/: note64.md
scripts/: ._read_field.m  cm_to_angstrom.m  freq_to_angstrom.m  parse.sh  parse_LOS.sh  plot_2D_data.m  plot_arbitrary.m  read_field.m  read_map.m  vacuum_to_air.m
scripts/old_version/: read_field.m
src/: Faddeeva.cpp  Faddeeva.hpp  Formal_solver.cpp  Formal_solver.hpp  Legendre_rule.cpp  Legendre_rule.hpp  RT_data_storage.cpp  RT_data_storage.hpp  RT_problem.cpp  RT_problem.hpp  RT_solver.cpp  RT_solver.hpp  RT_utility.cpp  RT_utility.hpp  Rotation_matrix.cpp  Rotation_matrix.hpp  Test_rii_include.cpp  Test_rii_include.hpp  Utilities.cpp  Utilities.hpp  configure.h.in  main.cpp  read_field.m
